--- a/components.json
+++ b/components.json
@@ -11,11 +11,11 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "mm/components",
-    "utils": "mm/lib/utils",
-    "ui": "mm/components/ui",
-    "lib": "mm/lib",
-    "hooks": "mm/hooks"
+    "components": "src/components",
+    "utils": "src/lib/utils",
+    "ui": "src/components/ui",
+    "lib": "src/lib",
+    "hooks": "src/hooks"
   },
   "iconLibrary": "lucide"
 }
