--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/adapter-neon": "^6.2.0",
     "@prisma/client": "^6.1.0",
+    "@radix-ui/react-label": "^2.1.1",
     "@stripe/stripe-js": "^5.4.0",
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-query-devtools": "^5.62.16",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
