--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate:dev": "dotenv -e .env.local -- npx prisma migrate dev",
-    "migrate:reset": "dotenv -e .env.local -- npx prisma migrate reset",
-    "migrate:prod": "dotenv -e .env.local -- npx prisma migrate deploy",
-    "migrate:createonly": "dotenv -e .env.local -- npx prisma migrate dev --create-only",
-    "db:seed": "dotenv -e .env.local -- npx prisma db seed",
-    "db:pull": "dotenv -e .env.local -- npx prisma db pull"
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "schema": "src/prisma/schema",
