--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@stripe/stripe-js": "^5.4.0",
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-query-devtools": "^5.62.16",
+    "@uploadthing/react": "^7.1.5",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,6 +39,7 @@
     "next": "15.1.3",
     "next-safe-action": "^7.10.2",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.7.15",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -47,6 +49,7 @@
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.4.4",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
